# loco_pilot

./: CMakeLists.txt  LICENSE_ADDENDUM.txt  package.xml
cfg/: Autopilot.cfg
launch/: autopilot.launch
msg/: AutopilotModes.msg  Command.msg  UberpilotStatus.msg
scripts/: autopilot_client.py  mavros_bridge.py
src/: local_autopilot.cpp  pilot.py
srv/: SetAutopilotMode.srv  SetAutopilotParams.srv
